--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "workspaces": [
     "services/*",
-    "libs/*"
+    "libs/*",
+    "apps/*"
   ],
   "scripts": {
     "build": "tsc -b",
@@ -17,6 +18,7 @@
     "@nestjs/core": "^10.3.3",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/swagger": "^7.3.1",
+    "@playwright/test": "^1.43.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
